[package]
name = "tyrosine"
version = "0.0.1"
authors = ["Terrior"]
edition = "2021"
description = "Implementation of NEAT with CUDA support."
homepage = "https://github.com/genomicals/tyrosine"
repository = "https://github.com/genomicals/tyrosine"
categories = ["algorithms", "science"]
keywords = ["NEAT", "machine", "learning", "neural", "network", "CUDA"]
license = "GPL-2.0 OR GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tyrosine-common = { path = "../tyrosine-common", version = "0.0.1" }

